## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	arena.txt attack.hlp attack.txt birth.hlp birth.txt \
	bldg.txt command.hlp command.txt commdesc.hlp commdesc.txt \
	dungeon.hlp dungeon.txt gambling.txt general.hlp general.txt \
	help.hlp helpinfo.txt j_name.txt japanese.txt \
	jattack.txt jbirth.txt jcommand.hlp jcommand.txt jcommand0.txt \
	jcommdesc.hlp jcommdesc.txt jdungeon.txt jgambling.txt jgeneral.txt \
	jhelp.hlp jhelpinfo.txt joption.hlp joption.txt jplaying.txt \
	jversion.txt magic.hlp magic.txt option.hlp option.txt \
	pref.hlp pref.txt readme.txt spoiler.hlp tang.txt version.txt
