## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
	arena.txt attack.hlp attack.txt birth.hlp birth.txt \
	bldg.txt command.hlp command.txt commdesc.hlp commdesc.txt \
	dungeon.hlp dungeon.txt gambling.txt general.hlp general.txt \
	help.hlp helpinfo.txt \
	j_general.txt j_item1.txt j_item2.txt j_trans.txt \
	jattack.hlp jattack.txt jbirth.hlp jbirth.txt jbldg.txt \
	jcharattr.hlp jcharattr.txt jcommand.hlp jcommand.txt \
	jcommdesc.hlp jcommdesc.txt jdefend.hlp jdefend.txt \
	jdungeon.hlp jdungeon.txt jgambling.txt jgeneral.hlp jgeneral.txt \
	jhelp.hlp jhelpinfo.txt jmagic.hlp jmagic.txt \
	jmonster.hlp jmonster.txt jobjects.hlp jobjects.txt \
	joption.hlp joption.txt jpref.hlp jpref.txt jspecial.hlp \
	jtang.txt jtown.hlp jtown.txt jversion.txt \
	jversion.txt magic.hlp magic.txt option.hlp option.txt \
	pref.hlp pref.txt readme.txt spoiler.hlp tang.txt version.txt

EXTRA_DIST = \
  $(angband_files)

if SET_GID
angbanddir = @DEFAULT_PATH@help

angband_DATA = \
  $(angband_files)
endif

