## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	10X20.FON 12X24.FON 5X8.FON 6X10.FON 6X12.FON 6X13.FON \
	6X13B.FON 6X9.FON 7X13.FON 7X13B.FON 8X13.FON 8X13B.FON \
	9X15.FON 9X15B.FON xm10x17.fnt xm10x17b.fnt xm12x20.fnt \
	xm12x20b.fnt xm16x25.fnt xm16x25b.fnt xm4x6.fnt xm5x8.fnt \
	xm6x12.fnt xm6x12b.fnt xm8x13.fnt xm8x13b.fnt xm8x16.fnt \
	xm8x16b.fnt
