## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	delete.me \
	music.cfg \
	$(music_files)

music_files = \
	arena.mp3 \
	dungeon01.mp3 \
	dungeon02.mp3 \
	dungeon03.mp3 \
	dungeon04.mp3 \
	dungeon06.mp3 \
	dungeon_yeek.mp3 \
	feel02.mp3 \
	gameover.mp3 \
	quest.mp3 \
	quest_boss.mp3 \
	quest_climax.mp3 \
	quest_obelon.mp3 \
	town01.mp3 \
	wild.mp3 \
	win.mp3
