## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	readme.txt \
	sound.cfg \
	$(sound_files)

sound_files = \
	se_maoudamashii_voice_monster01.wav \
	apple1-r.wav \
	decision25r.wav \
	drop1.wav \
	enemy-advent1-r.wav \
	sea-lion2-r.wav \
	se_maoudamashii_battle07.wav \
	se_maoudamashii_retro22.wav \
	se_maoudamashii_se_drink01.wav \
	sword-clash1-r.wav \
	sword-gesture3-r.wav \
	sword-slash3-r.wav
