## Makefile.am -- Process this file with automake to process Makefile.in

EXTRA_DIST = \
	readme.txt \
	sound.cfg \
	$(sound_files)

sound_files = \
	apple1-r.wav \
	bite.wav \
	breath.wav \
	buy.wav \
	claw.wav \
	critical01.wav \
	critical02.wav \
	critical03.wav \
	crush.wav \
	death.mp3 \
	decision25r.wav \
	destitem.wav \
	dig.wav \
	drop1.wav \
	eat.wav \
	enemy-advent1-r.wav \
	evil.wav \
	explode.wav \
	fail.mp3 \
	fall.mp3 \
	flee.wav \
	glass.wav \
	hit1.wav \
	hit2.wav \
	hit3.wav \
	hit_shot01.wav \
	hit_shot02.wav \
	hungry.mp3 \
	kill.wav \
	levelup.mp3 \
	magic.wav \
	miss.wav \
	moan.wav \
	opendoor.wav \
	quaff.wav \
	slime.wav \
	sea-lion2-r.wav \
	se_maoudamashii_battle07.wav \
	se_maoudamashii_voice_monster01.wav \
	se_maoudamashii_retro22.wav \
	se_maoudamashii_se_drink01.wav \
	shoot.wav \
	show.wav \
	shutdoor.wav \
	slime.wav \
	storeregi.wav \
	study.mp3 \
	summon.mp3 \
	sword-clash1-r.wav \
	sword-gesture3-r.wav \
	sword-slash3-r.wav \
	take_off.wav \
	teleport.wav \
	touch.wav \
	tplevel.mp3 \
	vorpala.wav \
	vorpalb.wav \
	wail.wav \
	warn.mp3 \
	wield.wav
